syntax = "proto3";

package admin;

service Tokens {
    rpc verify (AccessToken) returns (TokenInfo) {}
}

message AccessToken {
    string token = 1;
    repeated string access = 2;
}

message TokenInfo {
    string id = 1;
    string given_name = 2;
    string first_name = 3;
    string last_name = 4;
    string email = 5;
    repeated string roles = 6;
    repeated string permission = 7;
}